Fix BUG: Défilement des cartes
- Fix du bug qui créait une deuxième scrollbar
- C'était à cause du deuxième IonContent qui a été remplacé par un div
- Merci à Tommy Riquet pour son aide

--- a/ephecReservation/client/src/components/CardSchedule/CardReservation.css
+++ b/ephecReservation/client/src/components/CardSchedule/CardReservation.css
@@ -3,3 +3,7 @@
               color: gray;
               margin-top: 10%;
 }
+
+.content_reservation{
+              width: 100%;
+}
